Code/frontend-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: monitoring-testing-october24
  namespace: monitoring-testing-october24
spec:
  host: front.fuzzy-broccoli-vwrx9j76wqfww5.github.dev
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: query-frontend
    weight: 100
  wildcardPolicy: None
